learning git ignore

--- a/EDA/.gitignore
+++ b/EDA/.gitignore
@@ -1,9 +1,1 @@
-2017-2018/*
-combinedLabData.csv/*
-df_biopro.csv/*
-df_bmx.csv/*
-df_cbc.csv/*
-df_demo.csv/*
-df_dr1tot.csv/*
-df_mcq.csv/*
-df_paq.csv/*
+EDA/*
